Fixed the Firefox selection bug (not showing background) and prevented onDragStart

--- a/src/Editor/stylesheets/theme.css
+++ b/src/Editor/stylesheets/theme.css
@@ -15,13 +15,6 @@
 	caret-color: #000;
 }
 
-.codex-editor *::-moz-selection {
-	/* background-color: ... */
-}
-.codex-editor *::selection {
-	/* background-color: ... */
-}
-
 .codex-editor .markdown {
 	color: var(--md-blue-a400);
 }
